--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <section id="contact" class="section">
             <h2>Contact</h2>
             <p>Interested in working together? Feel free to reach out!</p>
-            <p>Email: <a href="steveneso2233@gmail.com">your.email@example.com</a></p>
+            <p>Email: <a href="steveneso2233@gmail.com">steveneso2233@gmail.com</a></p>
         </section>
     </div>
     <footer>
