--- a/index.html
+++ b/index.html
@@ -154,12 +154,14 @@
                     <h3>Project 3</h3>
                     <p>This code is for a supermarket owner that nat to try technology like python to help them count each goods</p>
                     <a href="https://github.com/Zheprixs/supermrkt-alg">View code</a>
+                    <a href="https://trinket.io/python/a7b8dc1797a8">View Demo</a>
                 </div>
                 <div class="project">
                     <img src="project4.jpg" alt="Project 4">
                     <h3>Project 4</h3>
                     <p>This project is for kids to embrace their creativity in shape where very helpful.</p>
-                    <a href="#">View code</a>
+                    <a href="https://github.com/Zheprixs/making_shape">View code</a>
+                    <a href="https://trinket.io/python/82e0db871cb9">View Demo</a>
                 </div>
                 <div class="project">
                     <img src="project5.jpg" alt="Project 5">
